force-app/main/default/objects/LoyaltyTier/LoyaltyTier.object-meta.xml
<CustomObject>
    <label>Membership Tier</label>
    <pluralLabel>Membership Tiers</pluralLabel>
</CustomObject>