force-app/main/default/objects/LoyaltyTier/fields/Eligibility_Rules__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Rules__c</fullName>
    <label>Eligibility Rules</label>
    <description>Free-form eligibility criteria (e.g. must be over 65, have a student email, hold a professional credential).</description>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>