force-app/main/default/objects/LoyaltyTier/fields/Fair_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Fair_Market_Value__c</fullName>
    <label>Fair Market Value</label>
    <description>Goods-and-services value of the tier. Dues paid above this amount are tax-deductible.</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>