force-app/main/default/objects/LoyaltyTier/fields/Grace_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Days__c</fullName>
    <label>Grace Period (Days)</label>
    <description>How many days after term end the member retains active status before lapsing.</description>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>