force-app/main/default/objects/LoyaltyTier/fields/Lifecycle_Status__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Status__c</fullName>
    <label>Lifecycle Status</label>
    <description>Lifecycle stage of this tier definition. Drives the path indicator on the tier record page.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>Sunset</fullName><default>false</default><label>Sunset</label></value>
            <value><fullName>Archived</fullName><default>false</default><label>Archived</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>