force-app/main/default/objects/LoyaltyTier/fields/Renewal_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Window_Days__c</fullName>
    <label>Renewal Window (Days)</label>
    <description>How many days before term end a member may renew.</description>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>