force-app/main/default/objects/LoyaltyTier/fields/Seat_Count__c.field-meta.xml
<CustomField>
    <fullName>Seat_Count__c</fullName>
    <label>Seat Count</label>
    <description>Number of members included in this tier (e.g. 2 adults for Family, 15 employees for Corporate).</description>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>