force-app/main/default/objects/LoyaltyTier/fields/Seat_Naming__c.field-meta.xml
<CustomField>
    <fullName>Seat_Naming__c</fullName>
    <label>Seat Naming</label>
    <description>Whether seats are named (specific people) or unnamed (any guest can use).</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Named</fullName><default>true</default><label>Named</label></value>
            <value><fullName>Unnamed</fullName><default>false</default><label>Unnamed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>