force-app/main/default/objects/LoyaltyTier/fields/Tier_Type__c.field-meta.xml
<CustomField>
    <fullName>Tier_Type__c</fullName>
    <label>Tier Type</label>
    <description>Membership tier type. Drives seat rules and eligibility.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Individual</fullName><default>true</default><label>Individual</label></value>
            <value><fullName>Household</fullName><default>false</default><label>Household</label></value>
            <value><fullName>Corporate</fullName><default>false</default><label>Corporate</label></value>
            <value><fullName>Student</fullName><default>false</default><label>Student</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>