force-app/main/default/objects/LoyaltyTier/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <label>Visibility</label>
    <description>Whether this tier is publicly available, invite-only, or closed to new enrollments.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Public</fullName><default>true</default><label>Public</label></value>
            <value><fullName>Invite-Only</fullName><default>false</default><label>Invite-Only</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>