force-app/main/default/objects/LoyaltyTier/listViews/Active_Tiers.listView-meta.xml
<ListView>
    <fullName>Active_Tiers</fullName>
    <columns>Name</columns>
    <columns>Tier_Type__c</columns>
    <columns>Visibility__c</columns>
    <columns>Lifecycle_Status__c</columns>
    <columns>Seat_Count__c</columns>
    <columns>Renewal_Window_Days__c</columns>
    <columns>Grace_Period_Days__c</columns>
    <columns>SequenceNumber</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lifecycle_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Tiers</label>
</ListView>