force-app/main/default/objects/LoyaltyTier/listViews/All_Membership_Tiers.listView-meta.xml
<ListView>
    <fullName>All_Membership_Tiers</fullName>
    <columns>Name</columns>
    <columns>Tier_Type__c</columns>
    <columns>Visibility__c</columns>
    <columns>Lifecycle_Status__c</columns>
    <columns>Seat_Count__c</columns>
    <columns>Renewal_Window_Days__c</columns>
    <columns>Grace_Period_Days__c</columns>
    <columns>Fair_Market_Value__c</columns>
    <columns>SequenceNumber</columns>
    <filterScope>Everything</filterScope>
    <label>All Membership Tiers</label>
</ListView>