force-app/main/default/objects/LoyaltyTier/listViews/Corporate_Tiers.listView-meta.xml
<ListView>
    <fullName>Corporate_Tiers</fullName>
    <columns>Name</columns>
    <columns>Tier_Type__c</columns>
    <columns>Visibility__c</columns>
    <columns>Lifecycle_Status__c</columns>
    <columns>Seat_Count__c</columns>
    <columns>Seat_Naming__c</columns>
    <columns>Fair_Market_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tier_Type__c</field>
        <operation>equals</operation>
        <value>Corporate</value>
    </filters>
    <label>Corporate Tiers</label>
</ListView>